Fixing naming conflict
Adding 'silverstripeseoimages' to replace 'imageoptimiserflysystemassetstore'

--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -3,7 +3,7 @@ SilverStripe\Assets\File:
     - webp
 
 ---
-Name: imageoptimiserflysystemassetstore
+Name: silverstripeseoimages
 After:
   - "assetscore"
   - "assetstore"
